[tool.poetry]
name = "recipe-qa-explorer"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["David Chanin <chanindav@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
typing-extensions = ">=3.7.4"
tqdm = "^4.64.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
